# MarinaioDrone

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  AMarinaioDrone.sln  AMarinaioDrone.vcxproj  AMarinaioDrone.vcxproj.filters  CGAL_Qt5_moc_and_resources.vcxproj  CGAL_Qt5_moc_and_resources.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  LICENSE  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
conf/: ImiRT.json  M2.json  box2.json  box3.json  conf1.json  evaluateQ.json  goth.json  huiyuan.json  optimize_trajectory.json  qiao.json  qiao4IBS.json  school.json  szu_south_part.json  xiaozhen.json  xuexiao.json
include/: airsim_control.cpp  airsim_control.h  cgal_tools.cpp  cgal_tools.h  common_util.cpp  common_util.h  ibs.cpp  ibs.h  icp.h  intersection_tools.cpp  intersection_tools.h  map_util.cpp  map_util.h  metrics.cpp  metrics.h  model_tools.cpp  model_tools.h  object_detection_tools.cpp  trajectory.cpp  trajectory.h  viewpoint.h  viz_base.h
log/DroneFly/Sun Feb 27 16 50 25 2022 STAGE 0/: DroneFly.exe.DESKTOP-MGLJDG8.mic.log.INFO.20220227-165025.28328
log/DroneFly/Sun Feb 27 19 30 55 2022 STAGE 0/: height_map.tiff  proxy.ply
log/PathPlanning/Sat Feb 26 00 19 43 2022 STAGE 1/: dense_sample_points.ply  height_map.ply  height_map_dialated.ply  monitoredpts.ply
log/PathPlanning/Sat Feb 26 00 21 46 2022 STAGE 1/: Sat Feb 26 00 22 53 2022STAGE1.txt  dense_sample_points.ply  height_map.ply  height_map_dialated.ply  monitoredpts.ply
src/: CMakeLists.txt  cmake_install.cmake
src/AirSim/: CMakeLists.txt  airsim_control.h
src/DensitySampling/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  DensitySampling.sln  DensitySampling.vcxproj  DensitySampling.vcxproj.filters  analyze_sampling_density.cpp  cmake_install.cmake  viz.h
src/DroneFly/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  DFtrajectory.cpp  DFtrajectory.h  DroneFly.sln  DroneFly.vcxproj  DroneFly.vcxproj.filters  Next_best_target.h  building.h  cmake_install.cmake  main.cpp  mapper.cpp  mapper.h  next_best_target.cpp  trajectory.cpp  trajectory.h  viz.cpp  viz.h
src/DroneFlyPro/: CMakeLists.txt  Drone.cpp  Drone.h  Map.cpp  Map.h  affection.cpp  shape.h  trajectory.cpp  trajectory.h
src/EvaluateQuality/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  EvaluateQuality.sln  EvaluateQuality.vcxproj  EvaluateQuality.vcxproj.filters  cmake_install.cmake  evaluateQ.cpp
src/IBS/: CMakeLists.txt  ibs.h
src/ImiRT/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  Drone.cpp  Drone.h  ImiRT.sln  ImiRT.vcxproj  ImiRT.vcxproj.filters  Map.cpp  Map.h  Perception.cpp  Perception.h  Viz.cpp  Viz.h  cmake_install.cmake  main.cpp
src/PathPlanning/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  CalRec.cu  CalRec.cuh  DroneScanViz.h  PathPlanning.sln  PathPlanning.vcxproj  PathPlanning.vcxproj.filters  SmithOptCuda.cu  SmithOptCuda.cuh  SmithOptimized.cpp  SmithOptimized.h  SmithViz.h  calculate_reconstructability.cu  calculate_reconstructability.h  cmake_install.cmake  dronescan.cpp  dronescan.h  initialize.cpp  initialize.h  optimize_trajectory.cpp  ppc.cpp  ppc.h  sampleConfig.h  viz.h
src/voro/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  Voro.sln  Voro.vcxproj  Voro.vcxproj.filters  cmake_install.cmake  v_base.cc  v_base.hh  v_base_wl.cc
