# CMakeList.txt : Top-level CMake project file, do global configuration

cmake_minimum_required (VERSION 3.11)

project ("AMarinaioDrone")
set(CMAKE_CXX_STANDARD 20)
add_compile_options($<$<CXX_COMPILER_ID:MSVC>:/MP>)

find_package(Eigen3 CONFIG REQUIRED)
if (EIGEN3_FOUND)   
include( ${EIGEN3_USE_FILE} ) 
endif()
find_package(Boost REQUIRED filesystem serialization)
find_package(OpenCV CONFIG REQUIRED)
find_package(argparse CONFIG REQUIRED)
find_package(CGAL CONFIG REQUIRED)
find_package(Boost REQUIRED filesystem)
find_package(OpenMP REQUIRED)
find_package(tinyobjloader REQUIRED)
find_package(glog CONFIG REQUIRED)
find_package(embree 3 CONFIG REQUIRED)

if (OPENMP_FOUND)
    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
    set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
endif()

function(link_general arg)
    target_include_directories(${ARGV0} PRIVATE ${Boost_INCLUDE_DIRS})
    target_link_libraries(${ARGV0} PRIVATE  ${OpenCV_LIBRARIES})
    target_link_libraries(${ARGV0} PRIVATE Boost::filesystem Boost::serialization)
    target_link_libraries(${ARGV0} PRIVATE argparse::argparse)
    target_link_libraries(${ARGV0} PRIVATE CGAL::CGAL)
    target_link_libraries(${ARGV0} PRIVATE tinyobjloader::tinyobjloader)
    target_link_libraries(${ARGV0} PRIVATE glog::glog)
    target_link_libraries(${PROJECT_NAME} PRIVATE embree)
endfunction()

FILE(GLOB LIBRARY_FILE "include/*.cpp" "include/*.h")
add_library(${PROJECT_NAME} ${LIBRARY_FILE})

target_include_directories(${PROJECT_NAME} PRIVATE ${Boost_INCLUDE_DIRS})
target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBRARIES})
target_link_libraries(${PROJECT_NAME} ${Boost_LIBRARIES})
target_link_libraries(${PROJECT_NAME} argparse::argparse)
target_link_libraries(${PROJECT_NAME} CGAL::CGAL)
target_link_libraries(${PROJECT_NAME} tinyobjloader::tinyobjloader)
target_link_libraries(${PROJECT_NAME} glog::glog)
target_link_libraries(${PROJECT_NAME} embree)

add_subdirectory(src)